Safari Z-Index Fix

--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -1,10 +1,6 @@
-// Base Code Coming From:
-// https://github.com/R-osey
-// Thanks!
 .tooltip {
   position: relative;
-  
-  
+   
   .tip {
     -webkit-transition: all 300ms ease-in-out, opacity 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out, opacity 300ms ease-in-out;
@@ -12,25 +8,13 @@
     transition: all 300ms ease-in-out, opacity 300ms ease-in-out;
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
-    // -webkit-border-radius: 4px;
-    // -moz-border-radius: 4px;
-    // -ms-border-radius: 4px;
-    // -o-border-radius: 4px;
-    // border-radius: 4px;
-    // -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
-    // -moz-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
-    // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
     position: absolute;
-    z-index: -1;
-    // top: 0px;
     display: block;
-    // background-color: #FFF;
     padding: 6px 12px;
     font-size: 1.6rem;
     text-align: center;
     font-weight: 400;
     white-space: nowrap;
-    // float: left;
     margin-top: 80px;
     text-align: center;
   }
@@ -42,7 +26,6 @@
       filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
       opacity: 1;
       top: -40px;
-      z-index: 1;
     }
   }
 }
